--- a/jsconfig.json
+++ b/jsconfig.json
@@ -13,6 +13,7 @@
       "@/context/*": ["context/*"],
       "@/public/*": ["public/*"],
       "@/api/*": ["api/*"],
+      "@/helpers/*": ["helpers/*"]
     }
   }
 }
