--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cookie": "^0.4.1",
     "framer-motion": "^4.1.17",
     "next": "11.0.0",
+    "pusher-js": "^7.0.3",
     "rc-drawer": "^4.3.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
