--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "babel-plugin-styled-components": "^1.13.2",
     "cookie": "^0.4.1",
     "date-fns": "^2.25.0",
+    "dayjs": "^1.10.7",
     "framer-motion": "^4.1.17",
     "next": "11.0.0",
     "pusher-js": "^7.0.3",
