--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-multi-carousel": "^2.6.5",
     "react-scroll": "^1.8.4",
     "react-stickynode": "^3.0.5",
+    "react-table": "^7.7.0",
     "react-toastify": "^8.0.2",
     "styled-components": "^5.3.0"
   },
