fixed orders bug

--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,12 @@
 {
   "presets": ["next/babel"],
-  "plugins": [["styled-components", { "ssr": true }]]
+  "plugins": [
+    [
+      "@babel/plugin-transform-runtime",
+      {
+        "regenerator": true
+      }
+    ],
+    ["styled-components", { "ssr": true }]
+  ]
 }
